[gd_scene load_steps=5 format=2]

[ext_resource path="res://Room/Images/HealthPot.png" type="Texture" id=1]
[ext_resource path="res://Room/DroneRepairStation.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 78.5128

[sub_resource type="CircleShape2D" id=2]
radius = 166.25

[node name="DroneRepairStation" type="RigidBody2D"]
mode = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="CollisionShape2D"]
texture = ExtResource( 1 )

[node name="Slot_1" type="PinJoint2D" parent="."]
position = Vector2( 0, -1 )
node_a = NodePath("..")
softness = 6.0

[node name="Slot_2" type="PinJoint2D" parent="."]
node_a = NodePath("..")
softness = 6.0

[node name="Slot_3" type="PinJoint2D" parent="."]
node_a = NodePath("..")
softness = 6.0

[node name="Slot_4" type="PinJoint2D" parent="."]
node_a = NodePath("..")
softness = 6.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2( 1.00594, 1 )
shape = SubResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_DroneRepairStation_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
